add showing message when registration failed

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -41,3 +41,5 @@ book.name.ua=Ukrainian name
 #orders
 users.books=Users books
 permit=Permit
+#validation and errors
+incorrect.data=incorrect data!
