--- a/src/main/resources/messages_ua.properties
+++ b/src/main/resources/messages_ua.properties
@@ -41,3 +41,5 @@ book.name.ua=Ім'я українською
 #orders
 users.books=Книжки у користувачів
 permit=Дозволити
+#validation and errors
+incorrect.data=Некоректні дані
