remove all redundant custom exceptions with one (CustomException) and set exc messages for l10n

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -44,3 +44,10 @@ permit=Permit
 #validation and errors
 incorrect.data=incorrect data!
 exc=exc
+author.not.found=
+book.not.found=
+user.not.found=
+order.not.found=
+book.not.available=
+tag.not.found=
+user.already.exist=
