add properties fields for l10n exc

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -43,11 +43,12 @@ users.books=Users books
 permit=Permit
 #validation and errors
 incorrect.data=incorrect data!
-exc=exc
-author.not.found=
-book.not.found=
-user.not.found=
-order.not.found=
-book.not.available=
-tag.not.found=
-user.already.exist=
+author.not.found=Author not found, please refresh page
+book.not.found=Book not found, please refresh page
+user.not.found=User not found, please refresh page
+order.not.found=Order not found, please refresh page
+book.not.available=Book not available, please refresh page
+tag.not.found=Tag not found, please refresh page
+user.already.exist=Username not available, please choose another
+bad.credentials=Incorrect values for user
+impossible.book.values=Incorrect values for book
