--- a/src/main/resources/messages_ua.properties
+++ b/src/main/resources/messages_ua.properties
@@ -43,4 +43,12 @@ users.books=Книжки у користувачів
 permit=Дозволити
 #validation and errors
 incorrect.data=Некоректні дані
-exc=помилка
+author.not.found=Автора не знайдено, будь ласка оновіть сторінку
+book.not.found=Книжку не знайдено, будь ласка оновіть сторінку
+user.not.found=Користувача не знайдено, будь ласка оновіть сторінку
+order.not.found=Заявку не знайдено, будь ласка оновіть сторінку
+book.not.available=Книжка не доступна, будь ласка оновіть сторінку
+tag.not.found=Тег не знайдено, будь ласка оновіть сторінку
+user.already.exist=Ім'я користувача не доступне, будь ласка оберіть інше
+bad.credentials=Введено некоректні значення для користувача
+impossible.book.values=Введено некоректні значення для книжки
