trying perform bean validation with l10n messages

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -52,3 +52,7 @@ tag.not.found=Tag not found, please refresh page
 user.already.exist=Username not available, please choose another
 bad.credentials=Incorrect values for user
 impossible.book.values=Incorrect values for book
+valid.user.username=username not correct
+valid.user.email=email not correct
+valid.user.phone=phone not correct
+valid.user.password=password not correct
