add returning success messages

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -50,7 +50,14 @@ book.not.available=Book not available, please refresh page
 tag.not.found=Tag not found, please refresh page
 user.already.exist=Username not available, please choose another
 impossible.book.values=Incorrect values for book
-valid.user.username=username not correct
-valid.user.email=email not correct
-valid.user.phone=phone not correct
-valid.user.password=password not correct
+valid.user.username=Username not correct
+valid.user.email=Email not correct
+valid.user.phone=Phone not correct
+valid.user.password=Password not correct
+#success messages
+book.added=Book successful added
+book.edited=Book successful edited
+book.deleted=Book successful deleted
+book.returned=Book successful returned
+order.permitted=Order successful permitted
+order.created=Order successful created
