add filter validation

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -51,6 +51,7 @@ book.not.available=Book not available, please refresh page
 tag.not.found=Tag not found, please refresh page
 user.already.exist=Username not available, please choose another
 impossible.book.values=Incorrect values for book
+impossible.filter.values=Incorrect values for filter
 valid.user.username=Username not correct
 valid.user.email=Email not correct
 valid.user.phone=Phone not correct
