add custom error pages for few statuses

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -56,6 +56,11 @@ valid.user.username=Username not correct
 valid.user.email=Email not correct
 valid.user.phone=Phone not correct
 valid.user.password=Password not correct
+warning=Oops... something went wrong. Please return to previous page
+error.server=Server error
+error.bad.request=Bad request
+error.access.denied=Access denied
+error.page.not.found=Page not found
 #success messages
 book.added=Book successful added
 book.edited=Book successful edited
