--- a/src/main/resources/messages_ua.properties
+++ b/src/main/resources/messages_ua.properties
@@ -56,6 +56,11 @@ valid.user.username=Некоректне ім'я користувача
 valid.user.email=Неможливий емейл
 valid.user.phone=Неможливий номер телефону
 valid.user.password=Некоректний пароль
+warning=Щось пішло не так. Будь ласка поверніться на попередню сторінку
+error.server=Помилка на сервері
+error.bad.request=Поганий запит
+error.access.denied=У доступі відмовленно
+error.page.not.found=Сторінку не знайдено
 #success messages
 book.added=Книжку успішно додано
 book.edited=Книжку успішно відредаговано
